quick fix so anchor links don't jump the page back to top

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@
 .showMore a {
   font-weight: bold;
   text-decoration: none;
+  color: steelblue;
 }
 
 .moreSection {
@@ -72,7 +73,7 @@
   padding-top: 20px;
 }
 
-a:visited { text-decoration: none; color:SteelBlue; }
-a:hover { text-decoration: none; color:SteelBlue; }
-a:focus { text-decoration: none; color:SteelBlue; }
-a:hover, a:active { text-decoration: none; color:cornflowerblue }
+a:visited { text-decoration: none; color: SteelBlue; }
+a:hover { text-decoration: none; color: SteelBlue; cursor: pointer;}
+a:focus { text-decoration: none; color: SteelBlue; }
+a:hover, a:active { text-decoration: none; color: cornflowerblue }
